crates/vesc-ffi/tests/ui/test_support_requires_feature.stderr
error[E0433]: cannot find `test_support` in `vesc_ffi`
 --> tests/ui/test_support_requires_feature.rs:2:28
  |
2 |     let _table = vesc_ffi::test_support::empty_table();
  |                            ^^^^^^^^^^^^ could not find `test_support` in `vesc_ffi`
  |
note: found an item that was configured out
 --> src/lib.rs
  |
  | #[cfg(test)]
  |       ---- the item is gated here
  | pub mod test_support;
  |         ^^^^^^^^^^^^
