crates/vesc-ffi/tests/ui/test_support_requires_feature.rs
fn main() {
    let _table = vesc_ffi::test_support::empty_table();
}
